--- a/source/_posts/2018-12-04-jvm.markdown
+++ b/source/_posts/2018-12-04-jvm.markdown
@@ -1,11 +1,56 @@
 ---
 layout: post
-title:  "java虚拟机知识总结"
+title:  "老鸟眼中的java和JVM知识体系"
 date:	2018-12-04 13:07:11 +0800
 categories: java
 ---
 
-> 多年来学习java虚拟机的知识总是零零散散，一直没有做过笔记，所有的东西都是在自己的脑子里，现在有时间了，有必要做一下系统的总结
+> 写了多年的java代码，现在以一个老鸟的视角来看java，真的和刚开始的时候是有天壤之别的，依然记得当初跑出第一个 *Hello World* 时候的感觉：*运行一个程序竟然什么感觉都没有，一闪而过*。现在看来，当年的自己还是太稚嫩了，一个简单的 *Hello World* 其实已经包含了java技术体系中最核心，最重要的东西-----**JVM**
+
+###jvm的运行模式
+
+	client 模式 java -client启用
+	server 模式 java -server启动
+
+client模式启动的是Client VM的实现，可以减少启动时间和内存占用,一般用在java客户端上,比如java的GUI程序
+
+server模式启动的是server VM的实现，启动时间会有点长，但是程序运行速度更快
+
+不管是client还是server模式有些底层技术是通用的：
+
+	自适应编译(JIT)
+	快速内存分配和垃圾回收
+	线程同步
+
+### jvm调优的目标
+
+	尽可能大的吞吐量,尽可能小的GC停顿时间（吞吐量是GC时间在总时间中的占比，比值越小，吞吐量越高）
+
+### JVM的垃圾收集器
+
+	串行收集器 >> 适合单处理器小数据集
+	并行收集器 >> 吞吐量优先，多个线程执行GC，系统一定会出现短时Stop the World
+	并发收集器 >> 响应时间优先，GC时系统不会出现Stop the World
+
+* 选择垃圾收集器的原则
+
+ * 如果应用的数据集小于100M，或者在单个处理器上运行，没有暂停时间要求，则使用串行收集器
+ * 如果系统的吞吐量是第一优先级而且系统的暂停是可以接受的，使用并行收集器
+ * 如果系统的响应时间比吞吐量更重要，并且垃圾收集暂停必须小于1s,则使用并发收集器
+
+### 
+	-XX:+UseSerialGC 使用串行收集器（串行）
+	-XX:+UseParallelGC 使用并行收集器(并行）
+	-XX:-UseParallelOldGC 关闭并行压缩（并行）
+	-XX:+UseConcMarkSweepGC 启用CMS收集器(并发）
+	-XX:+UseG1GC	启用G1收集器(并发）
+	-XX:ParallelGCThreads=<N> 调整并行收集器的GC线程数量
+
+### volatile为什么不能实现线程安全
+
+[为什么volatile不能保证线程安全](https://blog.csdn.net/qq_33330687/article/details/80990729)
+
+[jvm调优](https://blog.csdn.net/wuzhilon88/article/details/49201891)
 
 ### 平时遇到的异常
 
