--- a/source/_posts/2016-10-20-regular.markdown
+++ b/source/_posts/2016-10-20-regular.markdown
@@ -49,8 +49,13 @@ categories:	linux
  * `|` 用或的方式查找多个符合条件的字符串
 		egrep "ss|ff" /home/config.conf #匹配含有ss或ff的行
  
-
-		
+ * `\` 的用法
+		\d 匹配任何十进制数；相当于[0-9]
+		\D 匹配任何非数字字符;相当于[^0-9]
+		\s 匹配任何空白字符;相当于[\t\n\r\f\v]
+		\S 匹配任何非空白字符;相当于[^\t\n\r\f\v]
+		\w 匹配任何字母数字字符，相当于[a-zA-Z0-9_]
+		\W 匹配任何非字母数字字符;相当于[^a-zA-Z0-9_]
 
 		
 		
