--- a/source/_posts/2015-05-27-good life.markdown
+++ b/source/_posts/2015-05-27-good life.markdown
@@ -5,9 +5,13 @@ date:   2015-05-27 13:07:11 +0800
 categories: life
 ---
 
-&nbsp;&nbsp;&nbsp;&nbsp;*读了很多年的书，也工作了很多年，到头来发现，有一个好的生活习惯比什么都重要....*。
+&nbsp;&nbsp;&nbsp;
 
-## 不良的嗜好
+>  &nbsp;*读了很多年的书，也工作了很多年，到头来发现，有一个好的生活习惯比什么都重要....*。
+
+
+
+##  不良的嗜好
 
 *抽烟，喝酒* 这些都是不良的嗜好，这些不好的习惯会极大的影响自己的精力，身体，浪费宝贵的时间。如果有这些嗜好，戒掉还来得及，在自己还没有老去的时候。
 
@@ -17,7 +21,7 @@ categories: life
 现在自己马上要步入而立之年了。人到中年才发现早睡早起不仅身体会感觉舒爽，一天的时间似乎都充裕了...早起，看朝阳升起，看彩霞，呼吸新鲜的空气，做一顿有营养的早餐，一天都神清气爽
 
 	所谓财富，其本质就是时间，空间在时间面前都弱爆了，谁能善用自己的时间，谁就会富有。
-    谁能占有和利用他人的时间，谁就会暴富。
+	谁能占有和利用他人的时间，谁就会暴富。
 
 
 ## 阅读
