--- a/source/_posts/2016-08-18-SSH1.markdown
+++ b/source/_posts/2016-08-18-SSH1.markdown
@@ -6,22 +6,24 @@ categories:	linux
 ---
 
 
->
-以前看电影，黑客们在一个黑乎乎的界面上噼里啪啦一顿狂敲，然后某栋楼就停电了，那个黑乎乎的界面上看上去是那么高端和神秘，这其实就是Linux的世界......
+
+> 以前看电影，黑客们在一个黑乎乎的界面上噼里啪啦一顿狂敲，然后某栋楼就停电了，那个黑乎乎的界面上看上去是那么高端和神秘，这其实就是Linux的世界......
+
+
 
 ## 文件系统
-	
+
  关于Linux的文件系统，可以查看这个官方的文档。
 
  **[Linux文件系统](http://www.pathname.com/fhs)**
- 
+
  这里还是做一些重要目录的总结吧，细节参考上面的文档。
 
 ## 核心目录和配置文件
 
 
 * 目录
- 
+
 		/dev/
 			Device files      
 			设备目录
@@ -64,9 +66,8 @@ categories:	linux
 		/proc
 			虚拟目录，是内存的映射，内核和进程的虚拟文件系统目录
 	
-
 * 非常重要的文件
- 
+
 		网卡的配置文件
 			/etc/sysconfig/network-scripts/ifcfg-eno16777736		
 		重启网卡
@@ -121,7 +122,7 @@ categories:	linux
 	4，linux的命令中不要在=两边加空格
 	5，linux中删除很危险，一定要目标最小化，删除时要使用find | args组合可以最小化
 	6，如果服务启动很慢，需要在hosts中配置ip和主机名的映射
-	
+
 
 ## 命令总结
 
@@ -168,7 +169,7 @@ categories:	linux
 		fdisk 
 			查看磁盘分区的命令
 			-l查看所有的信息		  
-	
+		
 		history 
 			查看执行命令的历史记录
 			-d 10 删除第10行的历史记录
@@ -237,12 +238,12 @@ categories:	linux
 			-s 指定分隔符
 		tarch
 			创建文件或者修改文件时间戳
-
+		
 		chkconfig
 			查看设置开机自动启动软件的命令		
 
 * 一般命令和功能
- 
+
 		lsof
 			列表打开的文件，可以查看打开文件的一些状态,专家级别的运维专用的
 			-i :port 查看端口	
