--- a/source/_posts/2019-01-20-ignite.markdown
+++ b/source/_posts/2019-01-20-ignite.markdown
@@ -31,4 +31,8 @@ categories: java
  * ignite集群的发现。ignite默认使用的是组播，可以自动发现相同网段内的节点，这一点非常不友好。在开发的过程中我们通过查看源代码才解决了怎样基于静态IP的方式来发现集群。至于使用zookeeper来发现集群，目前还没有尝试
  * ignite的分布式锁和数据网格的事务之间似乎有某种联系，我们在使用的过程中引发了一个数据库死锁的问题，原因没有找到，最终将ignite分布式锁更改为redis分布式锁问题得以解决，这个问题需要深入的研究。
 
+### ignite学习资源
 
+* [官方文档](<https://cwiki.apache.org/confluence/display/IGNITE/Apache+Ignite+Home>)
+
+* [相关文档](<https://apacheignite.readme.io/docs>)
