--- a/source/_posts/2018-08-20-kafka.merkdown.md
+++ b/source/_posts/2018-08-20-kafka.merkdown.md
@@ -5,10 +5,9 @@ date:	2018-08-20 13:07:11 +0800
 categories: MQ
 ---
 
-### kafka实战
-
- * kafka是什么，kafka是一种消息系统
- * 常用的消息系统有哪些，既然有了那么多的消息系统为什么还需要kafka，其设计目标是什么？
+> kafka是什么?
+>
+> 常用的消息系统有哪些？既然有了那么多的消息系统为什么还需要kafka，其设计目标是什么？
 
 #### 消息系统的分类
 
@@ -25,7 +24,7 @@ categories: MQ
  * 削峰：消息系统可顶住峰值流量，业务系统可根据处理能力从消息系统中获取并处理对应量的请求
  * 可恢复：系统中部分组件失效并不会影响整个系统。
  * 异步通信：在不需要立即处理请求的场景下，可以将请求放入消息系统，合适的时候再处理。
- 
+
 #### 常用消息系统对比
 
  * RabbitMQ : Erlang编写，支持负载均衡，消息持久化，同时支持P2P和发布订阅模式
@@ -40,3 +39,14 @@ categories: MQ
 * 消息持久化 ： 所有消息均被持久化到磁盘
 * 完全分布式 ： producer , broker ,sonsumer 均支持水平扩展
 * 同时支持在线流式处理和离线批处理
+
+#### kafka怎样实现异地多活方案
+
+* kafka官方提供了一种方案：Mirror Maker，原理就是在多个数据中心之间用订阅/消费的方式搭建*数据通道*
+* uReplicator是Uber开源的解决方案，追求可靠性，零丢失和易用性
+
+#### 参考资料
+
+[kafka官方文档](<http://kafka.apachecn.org/documentation.html#design>)
+
+[kafka开发人员谈kafka](<https://cloud.tencent.com/developer/article/1114675>)
