--- a/source/_posts/2018-12-05-jvm2.markdown
+++ b/source/_posts/2018-12-05-jvm2.markdown
@@ -11,7 +11,7 @@ categories: java
 
 JVM内存区域的划分
 
-![](D:\code\myBog\source\image\JVM2.PNG)
+![](/content/image/JVM2.PNG)
 
 ### 程序计数器
 
@@ -76,7 +76,10 @@ JVM内存区域的划分
 
 ### 对象的创建
 
-![](D:\code\myBog\source\image\JVM3.PNG)
+![](/content/image/JVM3.PNG)
+
+* 图中黄色部分是对用户透明的，我们能干预的只有开始和结束的部分
+* 从对象的创建过程可以知道，对象的创建不具备原子性，所以new运算符具有线程安全问题
 
 * 对象的内存分配方式有两种：
   * 指针碰撞。如果GC收集器具有压缩整理的功能，可以使用这种方式
@@ -84,8 +87,6 @@ JVM内存区域的划分
 * 对象的创建也会有线程安全问题，多个线程同时创建对象的时候
   * 线程同步可以解决，但是效率很低
   * 本地线程分配缓存，每个线程先分配可用的堆内存区域，可以比较好的解决
-
-
 
 ### 对象的结构
 
