--- a/source/_posts/2018-12-05-jvm2.markdown
+++ b/source/_posts/2018-12-05-jvm2.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "老鸟眼中的JVM知识体系(2)-JVM内存模型"
+title:  "老鸟眼中的JVM知识体系(2)-JVM体系结构"
 date:	2018-12-05 18:07:11 +0800
 categories: java
 ---
