--- a/source/_posts/2019-06-05-2019年书单.md
+++ b/source/_posts/2019-06-05-2019年书单.md
@@ -1,23 +1,37 @@
 ---
 layout: post
-title:  "2019年书单"
+title:  "我的书单"
 date:	2019-06-05 13:07:11 +0800
 categories: life
 ---
 
-> 平时发现的好书在这里整理成册，并附上简单的书评，年底的时候来Check一下
+> 平时发现的好书在这里整理成册，并附上简单的书评
 
 
+
+### 2019年
 
 #### 《醉汉的脚步》
 
-已经看完。*要是我在高中的时候能够看到这本书该多好*。推荐指数 *****************
+已经看完，这是一本讲述随机性的书，对于理解混沌，理解概率帮助很大。*要是我在高中的时候能够看到这本书该多好*。推荐指数 5星
+
+
 
 #### 《创新者的窘境》
 
-没有开始
+已经看完，很多观点在多个地方看到过，没有太大的感觉，印象不深。
+
+
 
 #### 《深入理解计算机系统》
 
-还没有看完。*程序员进阶必看书*。推荐指数 *****************
+还没有看完。*程序员进阶必看书*。推荐指数 5星
+
+
+
+#### 《冰与火之歌》
+
+已经看完，相比电视剧，书中多了很多精彩的细节，比如武器的名字：*寒冰，碎心，长爪* 等，不知道为什么，看这本书的时候，我总是想起《红楼梦》.....
+
+
 
