--- a/source/_posts/2019-07-10-coredump01.md
+++ b/source/_posts/2019-07-10-coredump01.md
@@ -1,59 +1,69 @@
 ---
 layout: post
-title:  "一次生产故障引发的思考"
+title:  "一次生产故障的总结"
 date:	2019-07-10 21:07:11 +0800
 categories: java
 ---
 
-> 一个月以前我负责的系统突然发生了两次严重的宕机事故，这里总结一下事情的来龙去脉，梳理一下事故的原因和因此而获得的宝贵经验
+> 一个月以前我负责的系统突然发生了两次严重的宕机事故，现在终于有时间静下来做一下总结了。
 
 ### 事故经过
 
-> 6月14号，星期五下班前夕，大家都沉浸在马上要过周末的兴奋之中。
->
-> 17：30
->
-> 突然收到运维工程师的一条消息：mmkt系统宕机了。mmkt由3个节点组成：A,B,C
->
-> 17：31 
->
-> 收到这个信息，直觉就是是不是有异常的流量，很快自己就否定了这个假设：因为mmkt这个系统是一个消息系统，就算有异常流量，消息队列也会起到消峰的作用。然后我尝试连接C服务器看看服务器的各项性能指标和系统运行日志奇怪的一幕发生了：SSH竟然连不了，提示：**-bash: fock : Cannot allocate memory**. 三台服务器中有一台出现这种情况。但是另外两台也不能正常提供服务了。
->
-> 17：35 
-> 尝试连接A机器，这次连上了，操作系统的内存，CPU，网络，IO都很正常，没有什么异常情况，查看mmkt的运行日志，发现大量的异常： **java.lang.OutOfMemoryError:Unable to create new native thread**
->
-> 难道程序中有大量创建线程吗，脑海中马上回忆了一下mmkt系统中用到的线程池和对外的API，前者有最大线程数的限制，后者有熔断机制，都不会引发这种异常，那到底是什么原因呢？
->
-> 17：40
->
-> 运维工程师再次通知，A,B,C三台机器全部宕机了，而且SSH都已经不能连接，操作系统发生了coredump.也就是说现在这三台机器上具体到底发生了什么，大家一点头绪都没有。
->
-> 17：45
->
-> 经过大家的讨论，决定先联系数据中心对A,B,C三台机器进行物理重启，因为这是唯一的方法。
->
-> 17：47
->
-> 数据中心对A,B,C三台机器重启之后，A,B,C三台机器上的服务逐步恢复，本来以为系统已经正常了，但是很快相同的问题又出现了。这时候大家额头都开始冒汗。眼睁睁的看着系统再次宕机，紧接着大家进行了简单的讨论：结论是先对三台机器进行物理重启，然后暂停mmkt，这次三台机器没有再发生coredump
->
-> 18：00
->
-> 机器是暂时稳定了，但是mmkt系统依然处于停止状态，现在的当务之急是恢复mmkt。关键是到底是什么问题引发了**java.lang.OutOfMemoryError:Unable to create new native thread** ，人们总是对自己不太了解的技术缺乏信息，mmkt系统使用了一项新的技术：ignite，对于ignite的很多底层的细节知之甚少，ignite的数据持久化也是2个月以来系统的唯一变化点，所以，我们推测是ignite的数据持久化导致了这次生产故障。
->
-> 18：05
->
-> 向架构师汇报了我们的判断之后，架构师发话：尽快解决问题，一定要在21：00之前解决。接下来我们就进入了紧张的编码，调试，测试阶段。
->
-> 19：00
->
-> 代码终于改好了，上线了。这次mmkt启动正常了。大伙终于放心了，接下来的事情就是彻底搞清楚问题的原因，在测试环境重新的任务了。
->
-> **正在大家以为问题已经解决了......**
->
-> 一周之后
->
-> 6月22号
->
-> 正是周末，突然微信群炸锅了，mmkt再次发生宕机故障，接着就是coredump。相同的现象，相同的过程再次重新，这次大家都傻眼了，这是怎么回事？ignite的问题不是已经解决了吗？
->
-> 
+事故的经过比较复杂，这里简单的概括一下大致是这样的：MMKT（系统的代号）由3个服务节点组成，在6月14日突然其中一个节点宕机，接着另外2个节点依次宕机。当时我们尝试SSH连接进服务器排查原因。现象是这样的： 
+
+```
+ -bash: fock : Cannot allocate memory.
+```
+运维工程师给出的解释是服务器操作系统core dump了，为了尽快恢复服务，联系数据中心对服务器进行了强制重启，服务得以恢复。服务恢复以后开始进行原因调查，通过查询监控数据发现，MMKT进程并没有什么异常，是突然宕机的。注意，这时候我们犯了一个错误 **理所应当的认为，系统宕机是由MMKT系统造成的，因为MMKT系统最先告警**，在问题还没有查清楚的情况下，首席架构师询问MMKT系统近日是否有过变更，回复说是增加了ignite持久化的功能，然后要求立即对MMKT系统进行回滚。既然领导要求了，我们也只好照办。立即开始回滚。系统是暂时稳定了，但是对于宕机的根本原因谁的心里都没底。当时的系统日志显示，宕机的原因是：
+
+```
+java.lang.OutOfMemoryError:Unable to create new native thread
+```
+
+**系统的线程耗尽了？**，感觉不太对劲，MMKT系统已经运行了很长时间了，难道真的是因为ignite的持久化功能导致线程数耗尽了吗？
+
+几天之后6月17日，相同的现象再次发生！！那么可以肯定 线程数耗尽并不是ignite引起的。
+
+这个问题之所以迟迟没有找到根因，是因为系统是突然core dump的，没有留下dump文件，没法对当时的情况进行详细的分析。我在对mmkt的日志进行了仔细的分析之后，提出了一个大胆的猜想：可能是其他应用创建的太多的线程，从而导致mmkt系统的故障，果不其然，在同一台虚拟机上还有另一个java进程：partner-briage，是其他同事负责的，因为httpClent使用不当，创建了太多的线程，导致操作系统的线程数耗尽了，在其日志文件中发现 其java.lang.OutOfMemoryError异常要早于MMKT，现在还剩下最后一个现象需要解释：为什么mmkt会早于partner-briage宕机，原来这是ignite的安全策略引起的，是一种保护机制，而partner-briage的进程一直存在，虽然它已经无法正常工作了。
+
+至此，问题终于解决了，我差点就从受害者变成了背锅侠.......
+
+
+
+###  OutOfMemory复盘
+
+程序在运行的时候，内存的问题可以分成两种： **内存溢出**，**内存泄漏**，这两种问题是不一样的。
+
+* 内存溢出通俗的讲就是内存不够用了
+* 内存泄漏就是内存分配后没有释放，或者是使用不当被错误的一直占有
+
+内存泄漏一般比较难以发现，少量的内存泄漏一般不会有什么大问题，但是大量的内存泄漏就会比较严重。
+
+java中的内存溢出又可以分为2类:
+
+* 栈溢出，stactOverFlow，比如方法递归太深，栈分配太小等
+* 堆溢出，OutOfMemory
+
+```
+java.lang.OutOfMemoryError: Java heap space
+java.lang.OutOfMemoryError: unable to create new native thread
+java.lang.OutOfMemoryError: PermGen space #java8以前才有
+java.lang.OutOfMemoryError: Requested array size exceeds VM limit
+```
+
+其中的 *unable to create new native thread*，是因为创建的线程太多，超过了系统的最大允许线程数。
+
+```
+# linux系统中可以这样查看系统的线程数限制
+cat /proc/sys/kernel/threads-max
+```
+
+系统的线程数限制是多个进程共享的，所以进程之间会相互影响，这也是这个生成故障的根本原因所在。
+
+> 在同一台物理机中多个Docker容器进行隔离，还会有这种问题吗？
+
+###  启示
+
+* 不能迷信领导或者权威，要有自己的判定
+* 大胆的假设，小心的求证
+* 做事情不能想当然，要有事实根据，这才是工程师该有的态度
