--- a/source/_posts/2020-04-01-有趣的manim.markdown
+++ b/source/_posts/2020-04-01-有趣的manim.markdown
@@ -5,5 +5,108 @@ date:   2020-04-01 20:07:11 +0800
 categories: python
 ---
 
+> manim是著名youtube主播3Blue1Brown自己开发并开源的视频制作框架，非常强大。3Blue1Brown自己制作的视频，每一期我基本都看过，惊为天人。看了他的视频我也萌生了自己做视频的想法，想做有些算法演示方面的视频，这里记录一下manim的学习笔记。
+
+## manim的安装
+
+* **git clone https://github.com/3b1b/manim**
+* **py -3 -m pip install -r requirement.txt**
+* 验证是否安装成功 **py -3 -m manim -h**   会显示manim的帮助文档
+* 生成第一个动画 **py -3 -m manim example_scene.py SquareToCircle -pl**
 
 
+
+##  安装和测试过程中遇到的问题
+
+在运行带有公式的文字排版的测试视频的时候报错了，而且都与 **MIKTex** 有关，这是一个排版工具，一般都与安装包有关，经常几次尝试和更新最终成功了，manim用到了LaTeX
+
+LaTeX是一个非常强大的排版系统
+
+
+
+##  LaTeX相关的知识
+
+```
+texdoc ctex 命令可以查看ctex相关的文档
+texdoc lshort-zh-cn 命令可以查看LaTeX文档
+```
+
+
+
+
+
+##  manim的帮助文档
+
+```
+usage: manim.py [-h] [-p] [-w] [-s] [-l] [-m] [--high_quality] [-g] [-i] [-f]
+                [-t] [-q] [-a] [-o FILE_NAME] [-n START_AT_ANIMATION_NUMBER]
+                [-r RESOLUTION] [-c COLOR] [--sound] [--leave_progress_bars]
+                [--media_dir MEDIA_DIR] [--video_dir VIDEO_DIR]
+                [--tex_dir TEX_DIR] [--livestream] [--to-twitch]
+                [--with-key TWITCH_KEY]
+                [file] [scene_names [scene_names ...]]
+
+positional arguments:
+  file                  path to file holding the python code for the scene
+  scene_names           Name of the Scene class you want to see
+
+optional arguments:
+  -h, --help            show this help message and exit
+  -p, --preview         Automatically open the saved file once its done
+  -w, --write_to_movie  Render the scene as a movie file
+  -s, --save_last_frame
+                        Save the last frame
+  -l, --low_quality     Render at a low quality (for faster rendering)
+  -m, --medium_quality  Render at a medium quality
+  --high_quality        Render at a high quality
+  -g, --save_pngs       Save each frame as a png
+  -i, --save_as_gif     Save the video as gif
+  -f, --show_file_in_finder
+                        Show the output file in finder
+  -t, --transparent     Render to a movie file with an alpha channel
+  -q, --quiet
+  -a, --write_all       Write all the scenes from a file
+  -o FILE_NAME, --file_name FILE_NAME
+                        Specify the name of the output file, ifit should be
+                        different from the scene class name
+  -n START_AT_ANIMATION_NUMBER, --start_at_animation_number START_AT_ANIMATION_NUMBER
+                        Start rendering not from the first animation, butfrom
+                        another, specified by its index. If you passin two
+                        comma separated values, e.g. "3,6", it will endthe
+                        rendering at the second value
+  -r RESOLUTION, --resolution RESOLUTION
+                        Resolution, passed as "height,width"
+  -c COLOR, --color COLOR
+                        Background color
+  --sound               Play a success/failure sound
+  --leave_progress_bars
+                        Leave progress bars displayed in terminal
+  --media_dir MEDIA_DIR
+                        directory to write media
+  --video_dir VIDEO_DIR
+                        directory to write video
+  --tex_dir TEX_DIR     directory to write tex
+  --livestream          Run in streaming mode
+  --to-twitch           Stream to twitch
+  --with-key TWITCH_KEY
+                        Stream key for twitch
+
+```
+
+
+
+
+
+
+
+##  manim相关资料
+
+[github地址](https://github.com/3b1b/manim)
+
+[bilibili官方频道](https://space.bilibili.com/88461692)
+
+[官方文档](https://eulertour.com/docs/)
+
+[文档集散地](https://manim.ml/index.html#)
+
+[有用的文档](https://github.com/cai-hust/manim-tutorial-CN)
