--- a/source/_posts/2020-04-01-有趣的数据可视化.md
+++ b/source/_posts/2020-04-01-有趣的数据可视化.md
@@ -1,22 +1,26 @@
 ---
 layout: post
-title:  "有趣的manim"
+title:  "很好玩的两个数据可视化工具"
 date:   2020-04-01 20:07:11 +0800
 categories: python
 ---
 
-> manim是著名youtube主播3Blue1Brown自己开发并开源的视频制作框架，非常强大。3Blue1Brown自己制作的视频，每一期我基本都看过，惊为天人。看了他的视频我也萌生了自己做视频的想法，想做有些算法演示方面的视频，这里记录一下manim的学习笔记。
+> 最近有一个想法，想把算法的具体运行过程用数据可视化的形式做成视频，放在B站上，这样既是自身知识的一种沉淀，又相当于经营了一个视频账号，在寻找视频制作工具的过程中，发现两个数据可视化工具非常有趣，**manim** 和 **processing**
 
-## manim的安装
+## 
+
+## 1. 有趣的manim
+
+manim是著名youtube主播3Blue1Brown自己开发并开源的视频制作框架，非常强大。3Blue1Brown自己制作的视频，每一期我基本都看过，惊为天人。看了他的视频我也萌生了自己做视频的想法，想做有些算法演示方面的视频，这里记录一下manim的学习笔记。
+
+
 
 * **git clone https://github.com/3b1b/manim**
 * **py -3 -m pip install -r requirement.txt**
 * 验证是否安装成功 **py -3 -m manim -h**   会显示manim的帮助文档
 * 生成第一个动画 **py -3 -m manim example_scene.py SquareToCircle -pl**
 
-
-
-##  安装和测试过程中遇到的问题
+### 测试过程中遇到的问题
 
 在运行带有公式的文字排版的测试视频的时候报错了，而且都与 **MIKTex** 有关，这是一个排版工具，一般都与安装包有关，经常几次尝试和更新最终成功了，manim用到了LaTeX
 
@@ -24,7 +28,7 @@ LaTeX是一个非常强大的排版系统
 
 
 
-##  LaTeX相关的知识
+### LaTeX相关的知识
 
 ```
 texdoc ctex 命令可以查看ctex相关的文档
@@ -33,9 +37,7 @@ texdoc lshort-zh-cn 命令可以查看LaTeX文档
 
 
 
-
-
-##  manim的帮助文档
+### manim的帮助文档
 
 ```
 usage: manim.py [-h] [-p] [-w] [-s] [-l] [-m] [--high_quality] [-g] [-i] [-f]
@@ -95,11 +97,7 @@ optional arguments:
 
 
 
-
-
-
-
-##  manim相关资料
+###  manim相关资料
 
 [github地址](https://github.com/3b1b/manim)
 
@@ -110,3 +108,10 @@ optional arguments:
 [文档集散地](https://manim.ml/index.html#)
 
 [有用的文档](https://github.com/cai-hust/manim-tutorial-CN)
+
+
+
+## 有趣的prosessing
+
+和manim相比， processing就简单很多，而且对java程序员更加友好
+
