--- a/source/_posts/2015-12-07-leader.markdown
+++ b/source/_posts/2015-12-07-leader.markdown
@@ -2,7 +2,7 @@
 layout: post
 title:  "如何当好项目小组长"
 date:   2015-12-01 13:07:11 +0800
-categories: life
+categories: 所思所想
 ---
 
 > 从今年开始，我开始带团队了，在公司的项目管理平台上，我的角色是“研发经理”。和其他3个兄弟并肩作战，负责维护和开发公司的一个有5年历史的老系统，在工作的过程中遇到了很多的问题。让我很困扰,这里记录一下遇到的问题，和自己的解决方法。
@@ -19,7 +19,7 @@ categories: life
 ### 解决办法
 
 	1,当接手一个新的项目，尤其是一个老系统。这时候，需要尽快，尽可能的理清楚系统的业务逻辑，能理多少是多少。
-    2，对此，我总结出的一个方法是：从用户入手，分析主要用户的主要业务逻辑。
+	2，对此，我总结出的一个方法是：从用户入手，分析主要用户的主要业务逻辑。
 	3，形成一个流程图，用自己最擅长的方式来做，跟别人沟通的时候，用这个图说事，来的更快。
 	4，从一个熟悉的技术，转向不熟悉的技术，没有别的捷径，需要自己利用下班时间来学习，以解决实际问题为前提。
 	5，合理规划需求实现的周期，不能全盘向产品妥协。
