--- a/source/_posts/2016-09-26-job.markdown
+++ b/source/_posts/2016-09-26-job.markdown
@@ -2,7 +2,7 @@
 layout: post
 title:  "全栈还是专攻，这是一个问题"
 date:   2016-09-26 13:07:11 +0800
-categories: life
+categories: 所思所想
 ---
 
 > 经常会浏览一下招聘网站，一方面，可以了解现在的市场行情，另一方面，可以了解目前行业使用的技术都有什么，具体有些什么要求，这是我根据我浏览很多信息之后的一点感悟
@@ -38,7 +38,7 @@ categories: life
         对这些功能最好的保证就是高水平的开发人员。
 
  * 用人单位需要的是全而专的人
- 
+
 		认真开用人单位的用人要求，大部分都是要求"熟悉"，并没有要求"精通"。
 		因此有理由相信用人单位需要的是视野开阔，对多种技术均有涉猎，但又能精通一两种的人
 
