--- a/source/_posts/2018-10-04-scrapy.md
+++ b/source/_posts/2018-10-04-scrapy.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "python爬虫框架crapy"
 date:	2018-10-04 13:07:11 +0800
-categories: python
+categories: 编程语言
 ---
 
 > scrapy是python中最著名的爬虫软件，最近需要写爬虫，所以使用了这个框架，这里记录一下scrapy的知识点
