--- a/source/_posts/2018-12-04-jvm.markdown
+++ b/source/_posts/2018-12-04-jvm.markdown
@@ -2,7 +2,7 @@
 layout: post
 title:  "老鸟眼中的JVM知识体系(1)-Java体系"
 date:	2018-12-04 13:07:11 +0800
-categories: java
+categories: 编程语言
 ---
 
 > 写了多年的java代码之后，现在以一个老鸟的视角来看java，真的和刚开始的时候是有天壤之别的，依然记得当初跑出第一个 *Hello World* 时候的感觉：*运行一个程序竟然什么感觉都没有，竟然如此平凡*。现在看来，当年的自己还是太稚嫩了，一个简单的 *Hello World* 其实已经包含了java技术体系中最核心，最重要的东西-----**JVM**
