--- a/source/_posts/2018-12-06-jvm3.markdown
+++ b/source/_posts/2018-12-06-jvm3.markdown
@@ -2,7 +2,7 @@
 layout: post
 title:  "老鸟眼中的JVM知识体系(3)-垃圾回收"
 date:	2018-12-06 20:07:11 +0800
-categories: java
+categories: 编程语言
 ---
 
 > java的内存管理中垃圾回收是很重要的一部分,在java程序员的职业生涯中具有基石性的重要地位，java的内存垃圾回收是怎样的机制呢，java程序员在写代码的时候是不用刻意关心垃圾回收的，但是在大规模，高并发系统中如果出现了系统瓶颈，垃圾回收就是很重要的优化项...
