--- a/source/_posts/2018-12-07-jvm4.markdown
+++ b/source/_posts/2018-12-07-jvm4.markdown
@@ -2,7 +2,7 @@
 layout: post
 title:  "老鸟眼中的JVM知识体系(4)-垃圾收集器与内存分配回收策略"
 date:	2018-12-06 19:07:11 +0800
-categories: java
+categories: 编程语言
 ---
 
 > 定位了内存中的垃圾之后，具体的垃圾收集是垃圾收集器进行的，垃圾收集器是垃圾收集算法的具体实现，JVM规范没有对垃圾收集器进行强制的规范，垃圾收集器的种类很多，不同的垃圾收集器在不同的业务场景下性能表现不一样，选择垃圾收集器的目的就是为了提升垃圾收集的效率
