--- a/source/_posts/2018-12-10-jvm7.markdown
+++ b/source/_posts/2018-12-10-jvm7.markdown
@@ -2,7 +2,7 @@
 layout: post
 title:  "老鸟眼中的JVM知识体系(6)-调试工具"
 date:	2018-12-08 19:07:11 +0800
-categories: java
+categories: 编程语言
 ---
 
 > 这里梳理一下平时经常使用的JVM调试工具，这里主要是官方的，当然也会总结一下非官方的工具。jdk发行的时候，顺带发行了一些小工具，和java，javac,javap在同一个目录中，这些工具非常有用，尤其是在排查生产环境的问题的时候。
