--- a/source/_posts/2019-02-20-gailv.markdown
+++ b/source/_posts/2019-02-20-gailv.markdown
@@ -2,7 +2,7 @@
 layout: post
 title:  "神奇的本福德定律"
 date:	2019-02-20 13:07:11 +0800
-categories: java
+categories: 所思所想
 ---
 
 > 《醉汉的脚步》是一本讲述随机性相关知识的书籍，其中有一个非常有趣的知识点：**本福德定律**
