--- a/source/_posts/2019-04-21-pattern.markdown
+++ b/source/_posts/2019-04-21-pattern.markdown
@@ -2,7 +2,7 @@
 layout: post
 title:  "总结一下我使用过的设计模式"
 date:	2019-04-21 13:07:11 +0800
-categories: java
+categories: 所思所想
 ---
 
 > 设计模式是java的精髓所在，深刻的体现了抽象和封装。能否运用好设计模式是衡量一个java程序员水平的重要分水岭，是衡量设计能力的一个综合指标。这里总结一下实际使用过的设计模式。
