--- a/source/_posts/2019-05-29-document.md
+++ b/source/_posts/2019-05-29-document.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "常用官方文档"
 date:	2019-05-29 13:07:11 +0800
-categories: 其他
+categories: 杂项
 ---
 
 > 经常需要查询有些官方网站的文档，这里进行一下汇总，方便平时查阅。以前走了不少弯路，总是轻信网友的结论，吃过很多次亏之后才发现，原来真相就在那里，就在官网上。
