--- a/source/_posts/2019-08-10-securety.md
+++ b/source/_posts/2019-08-10-securety.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "加密和解密"
 date:	2019-08-10 21:07:11 +0800
-categories: java
+categories: 所思所想
 ---
 
 > 最近在做的一些需求涉及到和几个银行之间的数据交互，而银行对数据安全的要求很高，其中一项就是加密，之前也零零散散的使用过java中的加密和解密，但是没有进行过系统的总结，这里进行一下梳理
