--- a/source/_posts/2016-10-28-VBAmima.markdown
+++ b/source/_posts/2016-10-28-VBAmima.markdown
@@ -2,7 +2,7 @@
 layout: post
 title:	"Excel VBA工程密码破解的方法"
 date:	2016-10-27 13:07:11 +0800
-categories:	Excel
+categories:	杂项
 ---
 
 > 今天无意中发现一个破解Excel VBA工程密码的方法，经测试在2003,2007,2010这三个版本上都可以正常使用，今记录在此。
