--- a/source/_posts/2016-11-22-python5.markdown
+++ b/source/_posts/2016-11-22-python5.markdown
@@ -2,7 +2,7 @@
 layout: post
 title:	"python基础知识点OOP总结"
 date:	2016-11-22 13:07:11 +0800
-categories:	python
+categories:	编程语言
 ---
 
 > 面向对象的思想虽然好理解，但是不同的语言的实现方式是有区别的，python的面向对象机制非常的灵活，也很优雅.....
