--- a/source/_posts/2018-12-08-jvm5.markdown
+++ b/source/_posts/2018-12-08-jvm5.markdown
@@ -2,7 +2,7 @@
 layout: post
 title:  "老鸟眼中的JVM知识体系(5)-字节码"
 date:	2018-12-08 19:07:11 +0800
-categories: java
+categories: 编程语言
 ---
 
 > 一直想对java的字节码相关的知识用自己的语言进行一下总结，坦率的说，学习java字节码并不能带来直接的效益，这应该算是一种 ”内功“。
