--- a/source/_posts/2019-01-20-ignite.markdown
+++ b/source/_posts/2019-01-20-ignite.markdown
@@ -2,7 +2,7 @@
 layout: post
 title:  "ignite实战总结"
 date:	2019-01-20 13:07:11 +0800
-categories: java
+categories: 中间件
 ---
 
 > 最近所负责的项目使用了ignite，系统的性能提升了3倍，这里记录一下ignite使用过程中的一些知识点
