--- a/source/_posts/2019-07-10-coredump01.md
+++ b/source/_posts/2019-07-10-coredump01.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "一次生产故障的总结"
 date:	2019-07-10 21:07:11 +0800
-categories: java
+categories: 编程语言
 ---
 
 > 一个月以前我负责的系统突然发生了两次严重的宕机事故，现在终于有时间静下来做一下总结了。
