--- a/source/_posts/2020-04-01-有趣的数据可视化.md
+++ b/source/_posts/2020-04-01-有趣的数据可视化.md
@@ -111,7 +111,10 @@ optional arguments:
 
 
 
-## 有趣的prosessing
+## 和manim类似的软件对比
 
-和manim相比， processing就简单很多，而且对java程序员更加友好
+  * **processing**,基于java语言开发,目的是生成视觉艺术,目标是基于计算机的文艺人士
+  * **geogebra**,更倾向于是教学工具和学习工具,目标用户是学生和教师
+  * **blender**,基于c++的三维建模软件,目标领域是游戏，动漫
+  * manim的优势是集3者之长，更适合做科普视频
 
