--- a/source/_posts/2020-12-01-mac中的必备环境搭建.md
+++ b/source/_posts/2020-12-01-mac中的必备环境搭建.md
@@ -38,6 +38,7 @@ categories: java
 返回上一个操作的位置     option + command + ←
 查找类文件					    command + O
 查找所有类型文件				command + shift + O
+开启列式编辑            ⇧ + ⌘ + 8
 ```
 
 
