--- a/source/_posts/2021-10-01-golang学习笔记.md
+++ b/source/_posts/2021-10-01-golang学习笔记.md
@@ -5,18 +5,56 @@ date:   2021-10-01 21:07:11 +0800
 categories: go
 ---
 
-> 这里记录一下自己学习go lang的过程中遇到的一些问题，方便日后复习
+> 记录一下自己学习golang的过程中遇到的一些问题和学习心得体会，方便日后复习
 
-### vscode中配置go环境
+### 怎样用一句话总结golang
+这里摘录 *<<go语言编程>> 许世伟著* 中的一段描述来进行总结
 
-* 安装gopls
+```
+C语言是纯过程式的，这和它产生的历史背景有关。
+Java语言则是激进的面向对象主义推崇者，典型表现是它不能容忍体系里存在孤立的函数。
+而Go语言没有去否认任何一方，而是用批判吸收的眼光，将所有编程思想做了一次梳理，
+融合众家之长，但时刻警惕特性复杂化，极力维持语言特性的简洁，力求小而精。
+```
 
-  ```
-   go env -w GO111MODULE=on
-   go env -w GOPROXY=https://goproxy.cn,direct
-   go get -v golang.org/x/tools/gopls
-   go install github.com/ramya-rao-a/go-outline@latest
-   go install github.com/uudashr/gopkgs/v2/cmd/gopkgs@latest
-   go install golang.org/x/tools/cmd/goimports@latest
-  ```
 
+### 鸭子模型
+*当看到一只鸟走起来像鸭子、游泳起来像鸭子、叫起来也像鸭子，那么这只鸟就可以被称为鸭子*
+鸭子模型关注的不是对象的类型，而是对象的行为表现,golang使用鸭子模型实现接口机制，非常灵活
+
+go语言选择了鸭子模型来实现接口，这一点非常重要，直接的结果就是：go语言的接口具有非侵入性
+
+### 函数和方法
+* 函数和方法的可变参数其实是一个切片
+* 可变参数必须是参数列表中的最后一个参数
+* go的函数和方法可以有多个返回值,而且返回值可以有名字，其实就是本函数局部变量
+* 匿名函数如果和函数外的变量产生了作用则就是一个闭包，类似一种绑定关系
+* go中是现有"类型"，再有方法，相当于给类型绑定方法，而且类型和方法必须在同一个包中
+
+### golang的并发模型
+golang最强大的地方就是它的并发模型,对于写过java并发程序的人来说,使用go进行并发编程简直就是一种享受。之所以有这种感觉，是因为:
+
+**首先**,可以简单的理解：go的协程比线程要轻很多，开销更小，量变引起质变,golang的性能参数了质的飞越。
+**其次**,go和java的并发模型是不同的。
+
+*[开源协程库 libtask](https://swtch.com/libtask/)* 的源代码很值得一读，理解之后就知道协程背后是怎么回事了。
+
+```
+  java: 基于共享变量实现线程间通讯
+  go:   基于消息实现协程间的通讯
+```
+
+### go项目的打包和依赖管理问题
+长期以来，go的依赖管理一直比较混乱，直到 `go mod` 出现，一统天下。
+
+### gorm
+[gorm逆向工程](https://github.com/Shelnutt2/db2struct)
+
+
+
+### 参考文献
+<<go语言编程>> 许世伟 著
+[go语言高级编程](https://chai2010.cn/advanced-go-programming-book/)
+[go程序是怎样跑起来的](https://www.cnblogs.com/qcrao-2018/p/11124360.html)
+[go和java的GC对比](https://mp.weixin.qq.com/s/6qOHp3l3OqoRjURl8Lxq2A)
+[go语言设计与实现](https://draveness.me/golang/)
