--- a/source/_posts/2023-02-10-经验总结.md
+++ b/source/_posts/2023-02-10-经验总结.md
@@ -40,6 +40,7 @@ categories: 所思所想
 * 如果仅仅考虑正常情况当然很简单，但是太理想了
 * 优秀的设计者一定要多考虑异常情况,并尽量兼容这种情况
 * 业务系统要多问一问:能否支持回退和重来，后悔了怎么办
+* 一个耗时很长的任务，如果没有完成进度信息，跟瞎子无异
 
 ### 优秀的表结构设计
 * 表都要有主键
